tests/testdata/run/report_error.ts.out
1
error: Uncaught Error: foo
reportError(new Error("foo"));
            ^
    at [WILDCARD]/report_error.ts:2:13
